# tensorflow

./: .gitignore  BFLY.md  BUTTERFLY.md  pack_for_bni.sh
bfly/: BUILD.bazel  cc_wide.cc  connected.cc  connected_components.cc  floor.cc
bfly/models/: cc_wide.tflite  connected_components.tflite  floor.tflite
tensorflow/contrib/ios_examples/mps/: README.md
tensorflow/contrib/ios_examples/mps/mps-test/: prepare_data.py
tensorflow/contrib/makefile/: Makefile  build_64_ios.sh  build_and_pack_64_only.sh  build_helper.subr  build_ios.sh  build_ios_64_only.sh  compile_android_protobuf.sh  compile_ios_protobuf.sh  compile_ios_protobuf_64.sh  compile_ios_tensorflow.sh  compile_ios_tensorflow_64.sh  compile_nsync.sh  tf_op_files.txt
tensorflow/core/kernels/: concat_lib_cpu.cc  cwise_op_add_1.cc  cwise_op_equal_to_1.cc  cwise_op_equal_to_2.cc  cwise_op_floor_div.cc  cwise_op_greater.cc  cwise_op_greater_equal.cc  cwise_op_less.cc  cwise_op_less_equal.cc  cwise_op_neg.cc  cwise_op_pow.cc  sparse_to_dense_op.cc  strided_slice_op.cc  unique_op.cc
tensorflow/core/user_ops/: BUILD  connected_components.cc  image_ops.cc  mps_conv.cc  mps_conv.mm
tensorflow/lite/: BUILD
tensorflow/lite/core/: subgraph.cc
tensorflow/lite/delegates/flex/: BUILD  connected_components.tflite  keras_rewrite.tflite
tensorflow/lite/kernels/: BUILD  connected_component_test.cc  connected_components.cc  floor.cc  register.cc  register_ref.cc  reshape.cc
tensorflow/lite/toco/python/: toco_python_api.cc
tensorflow/python/keras/distribute/: BUILD
tensorflow/python/kernel_tests/: BUILD
(+10 files in other folders)
